--- a/Fide/Fide.Blazor/Components/Components/Grid.razor.css
+++ b/Fide/Fide.Blazor/Components/Components/Grid.razor.css
@@ -9,11 +9,17 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    min-height: 0; /* Разрешает сжатие */
-    overflow: hidden; /* Если нужно обрезать контент */
+    min-height: 0;
+    overflow: hidden;
 }
 
 .grid-item > * {
     flex-grow: 1;
     min-height: 0;
+}
+
+@media (max-width: 800px) {
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
 }
